# ambit

./: CMakeLists.txt  setup
include/ambit/: tensor.h
include/ambit/io/: file.h
samples2/: CMakeLists.txt  example2.cc
src/: CMakeLists.txt
src/libgaussian/: README
src/libgaussian/libcore/: am.cc  am.h  basisset.cc  basisset.h  molecule.cc  molecule.h
src/libgaussian/libdf/: df.cc  df.h
src/libgaussian/libjk/: jk.h
src/libgaussian/libmints/: dipole2c.cc  int2c.cc  int2c.h  int4c.cc  int4c.h  kinetic2c.cc  overlap.cc  overlap2c.cc  potential2c.cc  potential4c.cc  quadrupole2c.cc  schwarz.h
src/libgaussian/libob/: ob.h
src/python/: CMakeLists.txt
src/tensor/: slice.cc  slice.h  tensor.cc
src/tensor/core/: core.cc
src/tensor/global_array/: README  global_array.cc  global_array.h
test/: CMakeLists.txt  test.32  test.35  test_ccd_blocks.cc  test_ccsd.cc  test_ccsd_blocks.cc  test_cyclops.cc  test_global_array.cc  test_hf.cc  test_mp2.cc
